bugfix contact-page. overflow set to auto

--- a/style/contact.css
+++ b/style/contact.css
@@ -72,7 +72,7 @@
     animation-fill-mode: backwards;
     color: black;
     background-color: rgba(255,255,255,0.9);
-    overflow: scroll;
+    overflow: auto;
 }
 
 
